backend/challenges/k8s/k8s-36-one-front-door-for-qa-and-partners/solution/quickbyte-ingress-l36.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quickbyte-edge
spec:
  ingressClassName: nginx
  rules:
    - host: qa.quickbyte.lab
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-processor-svc
                port:
                  number: 8000
          - path: /notify
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 8080
